Minor grammar fixes in logs